[package]
name = "hrv-algos"
version = "0.4.1"
edition = "2021"
description = "A collection of algorithms for heart rate variability analysis."
authors = ["Mattis Kieffer <crates-io@mk-io.de>"]
license = "MIT"
repository = "https://github.com/mat-kie/hrv-algos"
readme = "README.md"
keywords = ["hrv", "heartrate", "dfa" , "algorithms", "rmssd"]


[dependencies]
anyhow = "1.0.94"
lstsq = "0.6.0"
nalgebra = { version = "0.33.2", features = ["serde", "serde-serialize"] }
rand = "0.8.5"
rayon = "1.10.0"
serde = { version = "1.0.130", features = ["derive"] , optional = true }

[dev-dependencies]
mockall = "0.7.0"
